Eliminacion de operaciones indeseadas
