# backend/services/product-service/src/infrastructure/repositories/ProductRepositoryPrisma.ts
@@ -23,10 +23,6 @@ export class ProductRepositoryPrisma {
     });
   }
 
-  async createMany(products: { name: string; type: string; storeId: number; price: number; sku?: string }[]) {
-    return this.prisma.product.createMany({ data: products, skipDuplicates: true });
-  }
-
   async getAll() {
   return this.prisma.product.findMany();
 }
